--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,6 +13,7 @@
         "@emotion/styled": "^11.11.5",
         "@mui/icons-material": "^5.15.18",
         "@mui/material": "^5.15.18",
+        "firebase": "^10.12.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^5.2.1",
