--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,7 +13,8 @@
         "@emotion/styled": "^11.11.5",
         "@mui/icons-material": "^5.15.18",
         "@mui/material": "^5.15.18",
-        "firebase": "^10.12.2",
+        "dotenv": "^16.4.5",
+        "firebase": "^10.12.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^5.2.1",
